rendered skyblue box

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <div id="root"></div>
      <script type="text/babel">
         (() => {
-            const name = 'wgextra';
             ReactDOM.render(
-                <p>Hello! {name.toUpperCase()}</p>,
+                <div className='box'></div>,
                 document.getElementById('root')
             );
         })();
