--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
      <script type="text/babel">
         (() => {
             ReactDOM.render(
-                <div className='box'></div>,
+                // <div className='box'></div>,
+                <div style={{width:100, height:100,backgroundColor:'tomato'}}></div>,
                 document.getElementById('root')
             );
         })();
