--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
     <div id="root"></div>
      <script type="text/babel">
         (() => {
+            function showMessage(){
+                alert("HELLO!!!");
+            }
             ReactDOM.render(
                 // <div className='box'></div>,
-                <div style={{width:100, height:100,backgroundColor:'tomato'}}></div>,
+                <div style={{width:100, height:100,backgroundColor:'tomato'}} 
+                onClick={showMessage}></div>,
                 document.getElementById('root')
             );
         })();
