--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
     <div id="root"></div>
      <script type="text/babel">
         (() => {
-            // function Counter(){
-            //     return <div>0</div>
-            // }
             function Counter(props){
-                return <div>0 {props.color}</div>
+                return <li style={{backgroundColor:props.color}}>0</li>
             }
             ReactDOM.render(
-                <div>
-                    <Counter color="tomato"/>
-                    <Counter color="skyblue"/>
-                    <Counter color="limegreen"/>
+                <div className="container">
+                    <ul>
+                        <Counter color="tomato"/>
+                        <Counter color="skyblue"/>
+                        <Counter color="limegreen"/>
+                    </ul>
                 </div>,
                 document.getElementById('root')
             );
