--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
      <script type="text/babel">
         (() => {
             function Counter(props){
-                function countUp(){
-                    alert("count up!");
+                function countUp(color){
+                    alert(color);
                 }
                 return (
-                    <li style={{backgroundColor:props.color}} onClick={countUp}>
+                    <li style={{backgroundColor:props.color}} onClick={() => countUp(props.color)}>
                     0</li>
                 );
             }
