added event handling on a tag

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
      <script type="text/babel">
         (() => {
             function Counter(props){
-                function countUp(color){
+                function countUp(e, color){
+                    e.preventDefault();
                     alert(color);
                 }
                 return (
-                    <li style={{backgroundColor:props.color}} onClick={() => countUp(props.color)}>
-                    0</li>
+                    <li style={{backgroundColor:props.color}}>
+                     <a href="#" onClick={e=>countUp(e,props.color)}>
+                        0
+                     </a>
+                    </li>
                 );
             }
             ReactDOM.render(
