--- a/index.html
+++ b/index.html
@@ -12,18 +12,13 @@
     <div id="root"></div>
      <script type="text/babel">
         (() => {
-            function Counter(props){
-                function countUp(e, color){
-                    e.preventDefault();
-                    alert(color);
+
+            class Counter extends React.Component{
+                render(){
+                    return (
+                        <li style={{backgroundColor:this.props.color}}>0</li>
+                    );
                 }
-                return (
-                    <li style={{backgroundColor:props.color}}>
-                     <a href="#" onClick={e=>countUp(e,props.color)}>
-                        0
-                     </a>
-                    </li>
-                );
             }
             ReactDOM.render(
                 <div className="container">
