--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
         (() => {
 
             class Counter extends React.Component{
+                constructor(props){
+                    super(props);
+                    this.state={
+                        count:10
+                    };
+                }
                 render(){
                     return (
-                        <li style={{backgroundColor:this.props.color}}>0</li>
+                        <li style={{backgroundColor:this.props.color}}>
+                            {this.state.count}
+                        </li>
                     );
                 }
             }
