implement state management for count

--- a/index.html
+++ b/index.html
@@ -12,17 +12,25 @@
     <div id="root"></div>
      <script type="text/babel">
         (() => {
-
             class Counter extends React.Component{
                 constructor(props){
                     super(props);
                     this.state={
-                        count:10
+                        count:0,
+                        message:"hello!"
                     };
+                    this.countUp=this.countUp.bind(this);
+                }
+                countUp(){
+                    this.setState(prevState => {
+                        return {
+                            count:prevState.count + 1
+                        };                            
+                    });
                 }
                 render(){
                     return (
-                        <li style={{backgroundColor:this.props.color}}>
+                        <li style={{backgroundColor:this.props.color}} onClick={this.countUp}>
                             {this.state.count}
                         </li>
                     );
