refactored with map

--- a/index.html
+++ b/index.html
@@ -12,38 +12,45 @@
     <div id="root"></div>
      <script type="text/babel">
         (() => {
-            class Counter extends React.Component{
-                constructor(props){
-                    super(props);
-                    this.state={
-                        count:0,
-                        message:"hello!"
+            function Counter(props){
+                return (<li style={{backgroundColor:props.counter.color}}>
+                    {props.counter.id}:{props.counter.count}
+                </li>);
+            }
+            function CounterList(props){
+                const counters = props.counters
+                    .map(x => <Counter counter={x} key={x.id}/>)
+                return (
+                    <ul>
+                        {counters}
+                    </ul>
+
+                );
+            }
+
+            class App extends React.Component{
+                constructor() {
+                    super();
+                    this.state = {
+                        counters:[
+                            {id:"A", count:0, color:"tomato"},
+                            {id:"B", count:0, color:"skyblue"},
+                            {id:"C", count:0, color:"limegreen"}
+                        ]
                     };
-                    this.countUp=this.countUp.bind(this);
-                }
-                countUp(){
-                    this.setState(prevState => {
-                        return {
-                            count:prevState.count + 1
-                        };                            
-                    });
                 }
                 render(){
                     return (
-                        <li style={{backgroundColor:this.props.color}} onClick={this.countUp}>
-                            {this.state.count}
-                        </li>
+                        <div className="container">
+                            <CounterList counters={this.state.counters}/>
+                            <div>TOTAL INVENTORY: 3</div>
+                        </div>
                     );
                 }
             }
+
             ReactDOM.render(
-                <div className="container">
-                    <ul>
-                        <Counter color="tomato"/>
-                        <Counter color="skyblue"/>
-                        <Counter color="limegreen"/>
-                    </ul>
-                </div>,
+                <App/>,
                 document.getElementById('root')
             );
         })();
